--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -3,6 +3,6 @@ import init.variant.rc
 ## Service start here
 service cir_fw_update /system/bin/cir_fw_update -u cir.img
     class main
-    user root
-    group root
+    user system
+    group system
     oneshot
